# elminux

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  deny.toml  limine.cfg  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: abi_question.md  bug_report.md  config.yml  driver_request.md  kernel_panic.md
.github/workflows/: ci.yml  release.yml
docs/: development-setup.md
kernel/: linker.ld
kernel/elminux-drivers/: Cargo.toml
kernel/elminux-drivers/src/: driver.rs  lib.rs  registry.rs
kernel/elminux-hal/: Cargo.toml
kernel/elminux-hal/src/: acpi.rs  apic.rs  gdt.rs  idt.rs  lib.rs  mmio.rs  port.rs  uart.rs
kernel/elminux-ipc/: Cargo.toml
kernel/elminux-ipc/src/: capability.rs  channel.rs  lib.rs  message.rs
kernel/elminux-kernel/: Cargo.toml  linker.ld
kernel/elminux-kernel/src/: main.rs  print.rs
kernel/elminux-kernel/src/boot/: pvh.s
kernel/elminux-mm/: Cargo.toml
kernel/elminux-mm/src/: heap.rs  lib.rs  pmm.rs  vmm.rs
kernel/elminux-sched/: Cargo.toml
kernel/elminux-sched/src/: context.rs  lib.rs  queue.rs  task.rs
kernel/elminux-sync/: Cargo.toml
kernel/elminux-sync/src/: lib.rs
kernel/elminux-syscall/: Cargo.toml
kernel/elminux-syscall/src/: abi.rs  dispatcher.rs  handler.rs  lib.rs
tools/build-tools/: Cargo.toml
tools/build-tools/.cargo/: config.toml
userland/elinit/: Cargo.toml
userland/elinit/src/: main.rs
userland/elminux-std/: Cargo.toml
userland/elminux-std/src/: env.rs  io.rs  ipc.rs  lib.rs  string.rs  thread.rs
userland/epkg/: Cargo.toml
userland/epkg/src/: main.rs
userland/modsh/: Cargo.toml
userland/modsh/src/: builtin.rs  interactive.rs  lib.rs  main.rs  pipeline.rs
